--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         </div>
 
         <div class="home-img">
-            <img src="C:\Users\gomat\OneDrive\Pictures\WhatsApp Image 2025-03-07 at 7.47.45 PM.jpeg"
-                alt="Profile Picture">
+            <img src="https://raw.githubusercontent.com/your-username/repository-name/main/images/profile.jpg" alt="Profile Picture">
+
         </div>
     </section>
 
@@ -74,8 +74,8 @@
     <!-- ABOUT SECTION DESIGN -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="C:\Users\gomat\OneDrive\Pictures\WhatsApp Image 2025-03-07 at 7.47.45 PM.jpeg"
-                alt="Profile Picture">
+           <img src="https://raw.githubusercontent.com/your-username/repository-name/main/images/profile.jpg" alt="Profile Picture">
+
         </div>
 
 
