--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- ABOUT SECTION DESIGN -->
     <section class="about" id="about">
         <div class="about-img">
-           <img src="https://raw.githubusercontent.com/your-username/repository-name/main/images/profile.jpg" alt="Profile Picture">
+           <img src="https://raw.githubusercontent.com/Jagan-8/repository-portfolio/main/C:\Users\gomat\OneDrive\Pictures\jagan.jpeg/profile.jpg" alt="Profile Picture">
 
         </div>
 
