--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         </div>
 
         <div class="home-img">
-            <img src="https://raw.githubusercontent.com/your-username/repository-name/main/images/profile.jpg" alt="Profile Picture">
+            <img src=https://your-username.github.io/your-repo-name/images/jagan.jpeg
+ alt="Profile Picture">
 
         </div>
     </section>
