--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         </div>
 
         <div class="home-img">
-            <img src=https://your-username.github.io/your-repo-name/images/jagan.jpeg
- alt="Profile Picture">
+            <img src="https://wallpaperbat.com/img/1696576-in-pics-thalapathy-vijays-meets-students-times-of-india.jpg"="Profile Picture">
 
         </div>
     </section>
